# area-test-assignment

./: README.md  pyproject.toml  requirements.txt
src/area_test_assignment/: __init__.py  geometry.py
tests/: conftest.py  test_geometry.py
