[project]
name = "area-test-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alisher Nildibayev", email = "alisher.nil@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
