[project]
name = "area-test-assignment"
version = "0.1.0"
description = "geometry area calculator test assignment"
readme = "README.md"
authors = [
    { name = "Alisher Nildibayev", email = "alisher.nil@gmail.com" }
]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==8.3.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-vv -rP --maxfail=2 -p no:cacheprovider --disable-warnings"
testpaths = [
    "tests"
]